--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <section class="container">
         <h1>Moin Flensburg!</h1>
-        <p>Hier steht etwas Text.</p>
+        <p>Das hier bekannte Flensburger gehört zur Norddeutschen Kultur</p>
         <p class="jumbotron">Faszinierend <span class="glyphicon glyphicon-thumbs-up"></span></p>
     </section>
     <footer class="container">
